@@ -1,5 +1,5 @@
 AUX 50js2-mode-gentoo.el 114 RMD160 b3bb6ae5d042029f0c089bd9099752f40dd16a21 SHA1 c6334217e6a35c8713704011442eb9eda18a1dbc SHA256 79aec18245c3b33a4c08d6bda5111dae9f1fe6b9d58ba19b554b59c63fce58d9
 DIST js2-20080616a.el.bz2 79954 RMD160 adfa336b73bca5b07f473b36a2be63ad3f9dfe16 SHA1 3e43fdf6a98d9e905de31018e846aa5cae885559 SHA256 93ab4323dd0b55d03661363cc95a47357458e4e16821efc1b6cdcff6407799b0
-EBUILD js2-mode-20080616a.ebuild 512 RMD160 9e54b44378acd1cf61fb9cf4fd0225431fdb54b6 SHA1 4a3138f5c618bcf41057bab1acfe81d3fd50b419 SHA256 a7e254ddd87361647ba03a824c33c6e146b80b868497f81a188a6fa7a9512be6
-MISC ChangeLog 294 RMD160 1c794bce7c3e078145c3e7cf6d8fab56d3f1da45 SHA1 246ea33e92387bfd9274232b3f2291f06e48ee4d SHA256 2418ae37bbb69051729ae059271ea0c69773e8dc31d5c63640d8ed2734d7a18e
+EBUILD js2-mode-20080616a.ebuild 803 RMD160 3dbd706f78a8d5a30366e1aab8656b836c52f9dc SHA1 fe5059e27eb32d155ee20fe518ce1fcc48c240b5 SHA256 810de2723d3ade1334ea92ddf976fc5b9f8af956306c73289e3658c351b05a52
+MISC ChangeLog 418 RMD160 a45fb190f3216fc3327cf6c7ada8c65249a8fb8e SHA1 1e209661130311df91a9cf3bf79e7fbccd8dc8ca SHA256 cf16036d92b6caa0a13261fbda60a02c881226b431ede751b85869b3ef169345
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
