@@ -20,3 +20,10 @@ src_unpack() {
 	unpack ${A}
 	mv js2-${PV}.el ${PN}.el
 }
+
+pkg_postinst() {
+	elisp-site-regen
+	elog "If you want to activate js2-mode automatically for .js files,"
+	elog "add the following command to your ~/.emacs file:"
+	elog "(add-to-list 'auto-mode-alist '(\"\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\.js\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\'\" . js2-mode))"
+}
