@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 May 2009; Ulrich Mueller <ulm@gentoo.org> js2-mode-20080616a.ebuild:
+  Add message about autoloading to pkg_postinst.
+
 *js2-mode-20080616a (16 Jan 2009)
 
   16 Jan 2009; Ulrich Mueller <ulm@gentoo.org> +files/50js2-mode-gentoo.el,
